# eos-kolibri

./: Makefile.am  README.md  configure.ac
data/: Makefile.am  eos-kolibri-system-helper.conf  eos-kolibri-system-helper.service.in  eos-kolibri-system-helper.socket  eos-kolibri-system-helper.socket.in  org.learningequality.Kolibri.in
debian/: changelog  control  copyright  postinst  rules
